--- a/src/main/webapp/WEB-INF/fragments/footer.jspf
+++ b/src/main/webapp/WEB-INF/fragments/footer.jspf
@@ -2,5 +2,7 @@
 <%@ page language="java" contentType="text/html; charset=UTF-8"
     pageEncoding="UTF-8"%>
 <footer>
-	<p>Copyright Alexis VESLIN ssss&copy; - <%=LocalDate.now().getYear() %></p>
+	<img src="./img/enibay_logo.png" alt="logo enibay">
+	<p>Copyright Alexis VESLIN - Baptiste ROLLAND - Nicolas BRETECHER &copy; - ${LocalDate.now().getYear()}</p>
+
 </footer>
