--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -12,6 +12,10 @@ nav{
 body{
 	background-color: black;
 	color : white;
+
+	display: flex;
+	flex-direction: column;
+	align-items: center;
 }
 
 footer{
