--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -36,7 +36,8 @@ footer{
 }
 
 article{
-	border : 5px solid #e1bd29;
+	border : 1px solid #e1bd29;
+	border-radius: 10%;
 	padding: 1em;
 	margin-bottom : 2em;
 	width: 20%;
